<resources>
    <string name="app_name">carnelao</string>
    <string name="right"><![CDATA[>]]></string>
    <string name="left"><![CDATA[<]]></string>
    <string name="jogar">Jogar</string>
    <string name="Jogar">Jogar</string>
    <string name="fill_your_name">Nome do Jogador</string>
    <string name="keep_playing">Continuar</string>
    <string name="play">Jogar</string>
    <string name="pause">Pausado</string>
    <string name="resume">Continuar</string>
    <string name="btn_back">Voltar</string>
    <string name="btn_exit">Sair</string>
    <string name="highest_score">Maior Pontuação:</string>
    <string name="game_over">GAME OVER</string>
    <string name="lbl_score_title">Pontuação</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
        <!--pub-5324115865747226</string>-->
</resources>
